<resources>
    <string name="app_name">Trowel</string>
    <string name="build_config_feature_upright">Compute Feature Upright</string>
    <string name="build_config_setup_max_image_dimension">Max Image Width/Heigh Size(px)</string>
    <string name="build_config_feature_describer_method">Feature Describer Method</string>
    <string name="build_config_feature_describer_preset">Feature Describere Preset</string>
    <string name="build_config_match_geometric_model">Match Geometric Model</string>
    <string name="build_config_match_ratio">Match Ratio</string>
    <string name="build_config_match_method">Match Method</string>
    <string name="build_config_reconstruction_refinement_focal_length">Reconstruction Focal Length Refinement</string>
    <string name="build_config_reconstruction_refinement_principal_point">Reconstruction Principal Point Refinement</string>
    <string name="build_config_reconstruction_refinement_distortion">Reconstruction Distortion Refinement</string>
    <string name="build_config_fix_pose_bundle_adjustment">Fix Pose Bundle Adjustment</string>
    <string-array name="build_config_feature_describer_method_values">
        <item>AKAZE_MLDB</item>
        <item>AKAZE_FLOAT</item>
        <item>SIFT</item>
    </string-array>
    <string-array name="build_config_feature_describer_method_texts">
        <item>AKAZE MLDB</item>
        <item>AKAZE FLOAT</item>
        <item>SIFT</item>
    </string-array>
    <string-array name="build_config_feature_describer_preset_values">
        <item>NORMAL</item>
        <item>HIGH</item>
        <item>ULTRA</item>
    </string-array>
    <string-array name="build_config_feature_describer_preset_texts">
        <item>Normal</item>
        <item>High</item>
        <item>Ultra</item>
    </string-array>
    <string-array name="build_config_match_geometric_model_texts">
        <item>Fundamental Matrix Filtering</item>
        <item>Essential Matrix Filtering</item>
        <item>Homography Matrix Filtering</item>
    </string-array>
    <string-array name="build_config_match_geometric_model_values">
        <item>f</item>
        <item>e</item>
        <item>h</item>
    </string-array>
    <string-array name="build_config_match_ratio_values">
        <item>0.8f</item>
        <item>0.6f</item>
    </string-array>
    <string-array name="build_config_match_ratio_texts">
        <item>0.8</item>
        <item>0.6</item>
    </string-array>
    <string-array name="build_config_match_method_texts">
        <item>Auto</item>
        <item>Fast Cascade Hashing L2</item>
        <item>Cascade Hashing L2</item>
        <item>Approximate Nearest Neighbor L2</item>
        <item>BruteForce L2</item>
        <item>BruteForce Hamming</item>
    </string-array>
    <string-array name="build_config_match_method_values">
        <item>AUTO</item>
        <item>FASTCASCADEHASHINGL2</item>
        <item>CASCADEHASHINGL2</item>
        <item>ANNL2</item>
        <item>BRUTEFORCEL2</item>
        <item>BRUTEFORCEHAMMING</item>
    </string-array>
    <string name="title_activity_project_detail">ProjectDetailActivity</string>
    <string name="project_detail_tab_config">Configurations</string>
    <string name="project_detail_tab_images">Images</string>
    <string name="project_detail_tab_logs">Logs</string>
    <string name="build_config_image">Images Settings</string>
    <string name="build_config_feature">Feature Extraction Settings</string>
    <string name="build_config_match">Feature Matching Settings</string>
    <string name="build_config_reconstruction">Reconstruction Settings</string>
    <string name="build_config_reconstruction_Refinement">Reconstruction Refinement</string>
    <string name="project_list_create_project">Create Project</string>
    <string name="project_list_create_name">Enter Project Name</string>
    <string name="fire">Submit</string>
    <string name="project_list_project_name_input">Project Name</string>
    <string name="project_list_create_name_already_exists">A project with the same name already exists!</string>
    <string name="cancel">Cancel</string>
    <string name="project_list_delete_ensure">You are about to delete the project!</string>
    <string name="sure">Sure</string>
    <string name="project_list_delete_not_exists">Project doesn\'t exists!</string>
    <string name="project_list_delete_failed">Failed to delete project!</string>
    <string name="toggle_wireframe">Toggle Wireframe</string>
    <string name="toggle_lights">Toggle Lights</string>
    <string name="toggle_textures">Toggle Texture</string>
    <string name="toggle_animation">Toggle Animation</string>
    <string name="load_texture">Load Texture</string>
    <string name="toggle_boundingbox">Toggle Bounding Box</string>
</resources>